kubernetes/deployment-apache-cwb110.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cwb110-project
  labels:
    app: apache-cwb110
spec:
  replicas: 3
  selector:
    matchLabels:
      app: apache-cwb110
  template:
    metadata:
      labels:
        app: apache-cwb110
    spec:
      containers:
      - name: cwb110-project-site
        image: tayko/cwb110-project
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
