kubernetes/service-apache-cwb110.yaml
apiVersion: v1
kind: Service
metadata:
  name: cwb110-project-service
  labels:
    app: apache-cwb110
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: apache-cwb110
